--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -5,12 +5,12 @@ Requires:
 - pattern:jolla-hw-adaptation-hybris-droid-vibrator
 
 - droid-hal-@DEVICE@
-- droid-hal-@DEVICE@-sailfish-config
 - droid-hal-@DEVICE@-img-boot
-- droid-hal-@DEVICE@-pulseaudio-settings
-- droid-hal-@DEVICE@-policy-settings
 - droid-hal-@DEVICE@-kernel-modules
-- droid-hal-@DEVICE@-preinit-plugin
+- droid-config-@DEVICE@-sailfish-config
+- droid-config-@DEVICE@-pulseaudio-settings
+- droid-config-@DEVICE@-policy-settings
+- droid-config-@DEVICE@-preinit-plugin
 
 # These need to be per-device due to differing backends (fbdev, eglfs, hwc, ..?)
 - qt5-qtwayland-wayland_egl
