[patterns] Add GStreamer v1.0 as standard
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -27,6 +27,13 @@ Requires:
 #- gstreamer0.10-droideglsink
 #- nemo-qtmultimedia-plugins-gstvideotexturebackend
 
+# Add GStreamer v1.0 as standard
+- gstreamer1.0
+- gstreamer1.0-plugins-good
+- gstreamer1.0-plugins-base
+- gstreamer1.0-plugins-bad
+- nemo-gstreamer1.0-interfaces
+
 # This is needed for notification LEDs
 - mce-plugin-libhybris
 
