[patterns] make BT work. Fixes NEMO#810
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -56,5 +56,8 @@ Requires:
 # brought up (useful during development, available since update10)
 - jolla-rnd-device
 
+# from update13, this is needed explicitly
+- bluez-configs-sailfish
+
 Summary: Jolla HW Adaptation @DEVICE@
 
