[patterns] enable device lock and allow to select untrusted software
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -59,5 +59,8 @@ Requires:
 # from update13, this is needed explicitly
 - bluez-configs-sailfish
 
+# enable device lock and allow to select untrusted software
+- jolla-devicelock-plugin-encsfa
+
 Summary: Jolla HW Adaptation @DEVICE@
 
