--- a/droid-config-@DEVICE@.spec.template
+++ b/droid-config-@DEVICE@.spec.template
@@ -8,6 +8,9 @@
 
 %define dcd_path ./
 
+# Adjust this for your device
+%define pixel_ratio 1.0
+
 # We assume most devices will
 %define have_modem 1
 
