[patterns] move important patterns straight to the adaptation. Contributes to nemo#833
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-configuration-@DEVICE@.yaml
+++ b/patterns/templates/jolla-configuration-@DEVICE@.yaml
@@ -3,6 +3,8 @@ Name: jolla-configuration-@DEVICE@
 Requires:
 - pattern:jolla-hw-adaptation-@DEVICE@
 - pattern:jolla-configuration-sfe
+- pattern:jolla-sailfish-applications
+- pattern:jolla-ui-wayland
 
 Summary: Jolla Configuration @DEVICE@
 
