--- a/patterns/templates/jolla-configuration-@DEVICE@.yaml
+++ b/patterns/templates/jolla-configuration-@DEVICE@.yaml
@@ -2,7 +2,7 @@ Description: Pattern with packages for @DEVICE@ configurations
 Name: jolla-configuration-@DEVICE@
 Requires:
 - pattern:jolla-hw-adaptation-@DEVICE@
-- pattern:jolla-configuration-sfe
+- pattern:sailfish-porter-tools
 - pattern:jolla-sailfish-applications
 - pattern:jolla-ui-wayland
 
