[patterns] Add settings layout to templates

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -64,5 +64,8 @@ Requires:
 # enable device lock and allow to select untrusted software
 - jolla-devicelock-plugin-encsfa
 
+# Settings app needs this since update15
+- jolla-settings-layout
+
 Summary: Jolla HW Adaptation @DEVICE@
 
