[patterns] Cleanup rnd stuff into sailfish-porter-tools
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-configuration-@DEVICE@.yaml
+++ b/patterns/templates/jolla-configuration-@DEVICE@.yaml
@@ -2,7 +2,10 @@ Description: Pattern with packages for @DEVICE@ configurations
 Name: jolla-configuration-@DEVICE@
 Requires:
 - pattern:jolla-hw-adaptation-@DEVICE@
-- pattern:jolla-configuration-sfe
+- pattern:jolla-sailfish-applications
+- pattern:jolla-ui-wayland
+# Early stages of porting benefit from these:
+- pattern:sailfish-porter-tools
 
 Summary: Jolla Configuration @DEVICE@
 
