[patterns] add cellular and gps to templates as suggestions

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -63,5 +63,12 @@ Requires:
 # Settings app needs this since update15
 - jolla-settings-layout
 
+# For devices with working cellular modem:
+#- pattern:jolla-sailfish-cellular-apps
+#- telepathy-ring
+
+# For devices where test_gps eventually gets a fix:
+#- geoclue-provider-hybris-community
+
 Summary: Jolla HW Adaptation @DEVICE@
 
