geoclue-provider-hybris is available to build against

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -70,7 +70,7 @@ Requires:
 #- telepathy-ring
 
 # For devices where test_gps eventually gets a fix:
-#- geoclue-provider-hybris-community
+#- geoclue-provider-hybris
 
 Summary: Jolla HW Adaptation @DEVICE@
 
