[adb] Unconditionally unmount adb on adbd-prepare stop. Fixes JB#35683
When /usr/sbin/adbd-functionfs.sh mounts adb fs, for some reason two
mount points can appear on the mount list - one under /dev as expected
and another one at /opt/alien/dev - and single umount does not remove
both of them.

Add second umount command and do both from ExecStopPost rather than
ExecStop so that they will be executed unconditionally even if the
all commands in the start script are not successfully completed.

Signed-off-by: Simo Piiroinen <simo.piiroinen@jollamobile.com>

--- a/sparse/lib/systemd/system/adbd-prepare.service
+++ b/sparse/lib/systemd/system/adbd-prepare.service
@@ -9,7 +9,8 @@ Description=functionfs setup for adbd
 Type=notify
 RemainAfterExit=yes
 ExecStart=/usr/sbin/adbd-functionfs.sh
-ExecStop=/bin/umount adb
+ExecStopPost=/bin/umount adb
+ExecStopPost=/bin/umount adb
 
 [Install]
 WantedBy=graphical.target
