--- a/sparse/lib/systemd/system/droid-hal-init.service
+++ b/sparse/lib/systemd/system/droid-hal-init.service
@@ -2,7 +2,7 @@
 Description=droid-hal-init
 Wants=systemd-udev-settle.service
 After=local-fs.target systemd-udev-settle.service systemd-tmpfiles-setup.service
-Before=basic.target network.target bluetooth.service ofono.service sensord.service
+Before=basic.target network.target bluetooth.service ofono.service sensorfwd.service
 DefaultDependencies=no
 Conflicts=shutdown.target
 # Lets not do Requires= here as that means that this service will restart which leads automatically
