Package on device flashing files to separate rpm package
Signed-off-by: Matti Kosola <matti.kosola@jolla.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -12,6 +12,7 @@ Requires:
 - droid-config-@DEVICE@-pulseaudio-settings
 - droid-config-@DEVICE@-policy-settings
 - droid-config-@DEVICE@-preinit-plugin
+- droid-config-@DEVICE@-flashing
 - droid-hal-version-@DEVICE@
 
 - pulseaudio-modules-droid
