[ui] Instruct how to calculate pixel_ratio
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/droid-config-@DEVICE@.spec.template
+++ b/droid-config-@DEVICE@.spec.template
@@ -11,7 +11,11 @@
 # Community HW adaptations need this
 %define community_adaptation 1
 
-# Adjust this for your device
+# Sailfish OS is considered to-scale, if in app grid you get 4-in-a-row icons
+# and 2x2 or 3x3 covers when up-to-4 or 5-or-more apps are open respectively.
+# For 4-5.5" device screen sizes of 16:9 ratio, use this formula (hold portrait):
+# pixel_ratio = 4.5/DiagonalDisplaySizeInches * HorizontalDisplayResolution/540
+# Other screen sizes and ratios will require more trial-and-error.
 %define pixel_ratio 1.0
 
 %include droid-configs-device/droid-configs.inc
