--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -13,6 +13,7 @@ Requires:
 - droid-config-@DEVICE@-policy-settings
 - droid-config-@DEVICE@-preinit-plugin
 - droid-config-@DEVICE@-flashing
+- droid-config-@DEVICE@-bluez4
 - droid-hal-version-@DEVICE@
 
 - pulseaudio-modules-droid
@@ -54,8 +55,6 @@ Requires:
 # android diag mode only usable for certain android tools
 - usb-moded-diag-mode-android
 
-# from update13, this is needed explicitly
-- bluez-configs-sailfish
 # hammerhead, grouper, and maguro use this in scripts, so include for all
 - rfkill
 
