--- a/droid-config-@DEVICE@.spec.template
+++ b/droid-config-@DEVICE@.spec.template
@@ -1,4 +1,5 @@
 # These and other macros are documented in ../droid-configs-device/droid-configs.inc
+# Feel free to cleanup this file by removing comments, once you have memorised them ;)
 
 %define device @DEVICE@
 %define vendor @VENDOR@
@@ -19,4 +20,8 @@
 %define pixel_ratio 1.0
 
 %include droid-configs-device/droid-configs.inc
+
+# IMPORTANT if you want to comment out any macros in your .spec, delete the %
+# sign, otherwise they will remain defined! E.g.:
+#define some_macro "I'll not be defined because I don't have % in front"
 
