[devicelock] Add the device lock daemon to patterns. Contributes to JB#36511

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -60,6 +60,7 @@ Requires:
 
 # enable device lock and allow to select untrusted software
 - jolla-devicelock-plugin-encsfa
+- jolla-devicelock-daemon-encsfa
 
 # Settings app needs this since update15
 - jolla-settings-layout
