--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -67,5 +67,9 @@ Requires:
 # For devices where test_gps eventually gets a fix:
 #- geoclue-provider-hybris
 
+# Sailfish OS CSD tool for hardware testing
+# needs some configuration to get all features working
+- csd
+
 Summary: Jolla HW Adaptation @DEVICE@
 
