--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -64,8 +64,10 @@ Requires:
 - pattern:jolla-sailfish-cellular-apps
 - telepathy-ring
 
-# For devices where test_gps eventually gets a fix:
-#- geoclue-provider-hybris
+# For GPS
+- geoclue-provider-hybris
+# For Mozilla location services (online)
+- geoclue-provider-mlsdb
 
 # Sailfish OS CSD tool for hardware testing
 # needs some configuration to get all features working
