[patterns] Add example of jolla-settings-networking-multisim needed on multi-SIM devices.

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -63,6 +63,8 @@ Requires:
 # For devices with cellular modem. Those without one, please comment out:
 - pattern:jolla-sailfish-cellular-apps
 - telepathy-ring
+# For multi-SIM devices
+#- jolla-settings-networking-multisim
 
 # For GPS
 - geoclue-provider-hybris
