[patterns] Include only needed libhybris packages on jolla-hw-adaptation-hybris
Signed-off-by: Matti Kosola <matti.kosola@jolla.com>

--- a/patterns/common/sailfish-porter-tools.yaml
+++ b/patterns/common/sailfish-porter-tools.yaml
@@ -3,6 +3,7 @@ Name: sailfish-porter-tools
 Requires:
 - jolla-developer-mode
 - sailfishsilica-qt5-demos
+- libhybris-tests
 
 - busybox-static
 - net-tools
