[patterns] Move cellular configuration packages to jolla config.
telepathy-ring is part of jolla-sailfish-cellular-apps so it is
not needed to list anymore.

Signed-off-by: Matti Kosola <matti.kosola@jolla.com>

--- a/patterns/templates/jolla-configuration-@DEVICE@.yaml
+++ b/patterns/templates/jolla-configuration-@DEVICE@.yaml
@@ -5,8 +5,13 @@ Requires:
 - pattern:jolla-sailfish-applications
 - pattern:jolla-ui-wayland
 - pattern:jolla-ui-configuration-z@ICON_RES@
+# For devices with cellular modem. Those without one, please comment out:
+- pattern:jolla-sailfish-cellular-apps
 # Early stages of porting benefit from these:
 - pattern:sailfish-porter-tools
+
+# For multi-SIM devices
+#- jolla-settings-networking-multisim
 
 # Introduced starting Sailfish OS 2.0.4.x:
 # 3rd party accounts like Twitter, VK, cloud services, etc
