--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -26,7 +26,7 @@ source = sink.null.monitor
 
 [group]
 name   = feedbacksound
-flags  = route_audio, limit_volume, cork_stream, mute_by_route
+flags  = set_sink, limit_volume, cork_stream, mute_by_route
 sink   = sink.primary
 source = sink.null.monitor
 
@@ -159,155 +159,11 @@ source = source.primary
 
 # -------- Card section --------------------------------------------------------
 
-[card]
-type    = tvoutandbta2dp
-name    = startswith:"bluez_card"
-profile = a2dp
-flags   = disable_notify
-
-
-[card]
-type    = bta2dp
-name0    = startswith:"bluez_card"
-profile0 = a2dp
-name1    = equals:droid_card.primary
-profile1 = primary-primary
-
-[card]
-type    = bta2dpforalien
-name0    = startswith:"bluez_card"
-profile0 = a2dp
-name1    = equals:droid_card.primary
-profile1 = communication
-
-[card]
-type    = tvoutandbthsp
-name    = startswith:"bluez_card"
-profile = hsp
-flags   = disable_notify
-
-[card]
-type    = ihfandbthsp
-name0    = startswith:"bluez_card"
-profile0 = hsp
-name1    = equals:droid_card.primary
-profile1 = primary-primary
-flags   = disable_notify
-
-[card]
-type    = bthsp
-name0    = startswith:"bluez_card"
-profile0 = hsp
-name1    = equals:droid_card.primary
-profile1 = primary-primary
-
-[card]
-type    = bthspforcall
-name0    = startswith:"bluez_card"
-profile0 = hsp
-name1    = equals:droid_card.primary
-profile1 = voicecall
-
-[card]
-type    = bthspforalien
-name0    = startswith:"bluez_card"
-profile0 = hsp
-name1    = equals:droid_card.primary
-profile1 = communication
-
-[card]
-type    = ihfandheadset
-name    = equals:droid_card.primary
-profile = ringtone
-
-[card]
-type    = ihfandheadphone
-name    = equals:droid_card.primary
-profile = ringtone
-
-[card]
-type    = headset
-name    = equals:droid_card.primary
-profile = primary-primary
-
-[card]
-type    = headsetforcall
-name    = equals:droid_card.primary
-profile = voicecall
-
-[card]
-type    = headsetforalien
-name    = equals:droid_card.primary
-profile = communication
-
-[card]
-type    = headphone
-name    = equals:droid_card.primary
-profile = primary-primary
-
-[card]
-type    = headphoneforcall
-name    = equals:droid_card.primary
-profile = voicecall
-
-[card]
-type    = headphoneforalien
-name    = equals:droid_card.primary
-profile = communication
-
-[card]
-type    = ihfandtvout
-name    = equals:droid_card.primary
-profile = primary-primary
-
-[card]
-type    = earpiece
-name    = equals:droid_card.primary
-profile = voicecall
-
-[card]
-type    = earpieceforcall
-name    = equals:droid_card.primary
-profile = voicecall
-
-[card]
-type    = earpieceforalien
-name    = equals:droid_card.primary
-profile = communication
-
-[card]
-type    = ihfforcall
-name    = equals:droid_card.primary
-profile = voicecall
-
-[card]
-type    = ihf
-name    = equals:droid_card.primary
-profile = primary-primary
-
-[card]
-type    = ihfforalien
-name    = equals:droid_card.primary
-profile = communication
-
 # -------- Device section ------------------------------------------------------
 
 [device]
 type = tvoutandbta2dp
 sink = name@startswith:"bluez_sink"
-
-[device]
-type = tvoutandbthsp
-sink = equals:sink.primary
-
-[device]
-type   = tvoutandbthsp
-source = equals:source.primary
-
-[device]
-type  = ihfandbthsp
-sink  = equals:sink.primary
-ports = sink.primary:output-speaker
 
 [device]
 type  = ihfandheadset
@@ -368,6 +224,42 @@ flags = disable_notify, refresh_always, delayed_port_change
 
 [device]
 type   = bthspforalien
+source = equals:source.primary
+ports  = source.primary:input-bluetooth_sco_headset
+flags  = disable_notify, refresh_always
+
+[device]
+type  = bthfp
+sink  = equals:sink.primary
+ports = sink.primary:output-bluetooth_sco
+flags = disable_notify, refresh_always
+
+[device]
+type   = bthfp
+source = equals:source.primary
+ports  = source.primary:input-bluetooth_sco_headset
+flags  = disable_notify, refresh_always
+
+[device]
+type  = bthfpforcall
+sink  = equals:sink.primary
+ports = sink.primary:output-bluetooth_sco
+flags = disable_notify, refresh_always, delayed_port_change
+
+[device]
+type   = bthfpforcall
+source = equals:source.primary
+ports  = source.primary:input-bluetooth_sco_headset
+flags  = disable_notify, refresh_always
+
+[device]
+type  = bthfpforalien
+sink  = equals:sink.primary
+ports = sink.primary:output-bluetooth_sco
+flags = disable_notify, refresh_always, delayed_port_change
+
+[device]
+type   = bthfpforalien
 source = equals:source.primary
 ports  = source.primary:input-bluetooth_sco_headset
 flags  = disable_notify, refresh_always
@@ -440,12 +332,12 @@ sink  = equals:sink.primary
 ports = sink.primary:output-earpiece
 
 [device]
-type  = earpiece
+type  = earpieceforcall
 sink  = equals:sink.primary
 ports = sink.primary:output-earpiece
 
 [device]
-type  = earpieceforcall
+type  = earpiece
 sink  = equals:sink.primary
 ports = sink.primary:output-earpiece
 
@@ -482,6 +374,11 @@ type  = ihfforalien
 sink  = equals:sink.primary
 ports = sink.primary:output-speaker
 flags = refresh_always
+
+[device]
+type  = voicecall
+source= equals:source.primary
+ports = source.primary:input-voice_call
 
 [device]
 type = null
@@ -612,22 +509,16 @@ group = internal
 name  = "input of source.primary"
 group = internal
 
+[stream]
+property = media.role@equals:"abstract"
+group    = internal
+
 # For routing to sink.primaryandbluez
 [stream]
 property = media.name@startswith:"Simultaneous output on"
 group    = internal
 
 # -------- Context rule section ------------------------------------------------
-
-[context-rule]
-variable     = mode
-value        = equals:telephony
-set-property = module-name@equals:"module-bluetooth-discover", property:"bluetooth.hsp.auto.connect", value@constant:"true"
-
-[context-rule]
-variable     = mode
-value        = matches:"^[^t].*"
-set-property = module-name@equals:"module-bluetooth-discover", property:"bluetooth.hsp.auto.connect", value@constant:"false"
 
 [context-rule]
 variable     = call
@@ -648,41 +539,3 @@ set-property = sink-name@equals:"sink.primary", property:"x-nemo.voicecall.statu
 variable     = media_state
 value        = matches:"^[^t].*"
 set-property = sink-name@equals:"sink.primary", property:"x-nemo.media.state", value@copy-from-context
-
-[activity]
-device       = bthsp
-sink-name    = equals:sink.primary
-active       = sink-name@equals:"sink.fake.sco", property:"bluetooth.hsp.prevent.suspend.transport", value@constant:"true"
-inactive     = sink-name@equals:"sink.fake.sco", property:"bluetooth.hsp.prevent.suspend.transport", value@constant:"false"
-
-[context-rule]
-variable     = bluetooth_override
-value        = equals:active
-set-property = sink-name@equals:"sink.fake.sco", property:"bluetooth.hsp.prevent.suspend.transport", value@constant:"false"
-set-default  = bthsp:inactive
-
-[context-rule]
-variable     = bluetooth_override
-value        = equals:inactive
-set-property = sink-name@equals:"sink.fake.sco", property:"bluetooth.hsp.prevent.suspend.transport", value@constant:"true"
-set-default  = bthsp:active
-
-[context-rule]
-variable     = call
-value        = equals:inactive
-set-default  = bthsp:state
-
-[context-rule]
-variable     = call
-value        = equals:inactive
-set-property = sink-name@equals:"sink.fake.sco", property:"bluetooth.prefer.hsp", value@constant:"false"
-
-[context-rule]
-variable     = call
-value        = equals:incoming
-set-property = sink-name@equals:"sink.fake.sco", property:"bluetooth.prefer.hsp", value@constant:"true"
-
-[context-rule]
-variable     = call
-value        = equals:outgoing
-set-property = sink-name@equals:"sink.fake.sco", property:"bluetooth.prefer.hsp", value@constant:"true"
