[shutdown] shutdown gracefully. If the parameter %c is not specified for the droid-hal-shutdown script, The script will just exit without shutting down the services properly. Also fix an issue where the script would loop forever. JB#38944 is not regressed by this.

--- a/sparse/lib/systemd/system/droid-hal-init.service
+++ b/sparse/lib/systemd/system/droid-hal-init.service
@@ -13,7 +13,7 @@ Conflicts=shutdown.target
 Type=notify
 NotifyAccess=all
 ExecStart=/bin/sh /usr/bin/droid/droid-hal-startup.sh
-ExecStop=/bin/sh /usr/bin/droid/droid-hal-shutdown.sh
+ExecStop=/bin/sh /usr/bin/droid/droid-hal-shutdown.sh %c
 Restart=always
 # Lets make sure we don't block minutes in case of errors.
 TimeoutSec=15
