[config] Use better default for card profile. Fixes JB#39681
With default pulseaudio config (arm_droid_default.pa) primary (a
combined profile) is not generated, so using profile generated always
by default is better default in policy configuration as well.

--- a/sparse/etc/pulse/xpolicy.conf.d/bluez4.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez4.conf
@@ -13,7 +13,7 @@ profile = ringtone
 [card]
 type    = headset
 name    = equals:droid_card.primary
-profile = primary
+profile = primary-primary
 
 [card]
 type    = headsetforcall
@@ -28,7 +28,7 @@ profile = communication
 [card]
 type    = headphone
 name    = equals:droid_card.primary
-profile = primary
+profile = primary-primary
 
 [card]
 type    = headphoneforcall
@@ -43,7 +43,7 @@ profile = communication
 [card]
 type    = ihfandtvout
 name    = equals:droid_card.primary
-profile = primary
+profile = primary-primary
 
 [card]
 type    = earpiece
@@ -68,7 +68,7 @@ profile = voicecall
 [card]
 type    = ihf
 name    = equals:droid_card.primary
-profile = primary
+profile = primary-primary
 
 [card]
 type    = ihfforalien
@@ -128,7 +128,7 @@ type    = bta2dp
 name0    = startswith:"bluez_card"
 profile0 = a2dp
 name1    = equals:droid_card.primary
-profile1 = primary
+profile1 = primary-primary
 
 [card]
 type    = bta2dpforalien
