--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
@@ -12,7 +12,7 @@ type    = bta2dp
 name0    = startswith:"bluez_card"
 profile0 = a2dp_sink
 name1    = equals:droid_card.primary
-profile1 = primary
+profile1 = primary-primary
 flags1   = disable_notify
 
 [card]
@@ -28,7 +28,7 @@ type    = bthsp
 name0    = startswith:"bluez_card"
 profile0 = droid_hsp
 name1    = equals:droid_card.primary
-profile1 = primary
+profile1 = primary-primary
 flags1   = disable_notify
 
 [card]
@@ -52,7 +52,7 @@ type    = bthfp
 name0    = startswith:"bluez_card"
 profile0 = droid_hfp
 name1    = equals:droid_card.primary
-profile1 = primary
+profile1 = primary-primary
 flags1   = disable_notify
 
 [card]
@@ -90,7 +90,7 @@ flags1   = disable_notify
 [card]
 type    = headset
 name0   = equals:droid_card.primary
-profile0= primary
+profile0= primary-primary
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
@@ -114,7 +114,7 @@ flags1   = disable_notify
 [card]
 type    = headphone
 name0   = equals:droid_card.primary
-profile0= primary
+profile0= primary-primary
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
@@ -138,7 +138,7 @@ flags1   = disable_notify
 [card]
 type    = ihfandtvout
 name0   = equals:droid_card.primary
-profile0= primary
+profile0= primary-primary
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
@@ -178,7 +178,7 @@ flags1   = disable_notify
 [card]
 type    = ihf
 name0   = equals:droid_card.primary
-profile0= primary
+profile0= primary-primary
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
