[configs] Improve Camera startup times if RAM is 2GB or more. JB#39992
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/patterns/templates/jolla-configuration-@DEVICE@.yaml
+++ b/patterns/templates/jolla-configuration-@DEVICE@.yaml
@@ -29,5 +29,9 @@ Requires:
 # needs some configuration to get all features working
 - csd
 
+# Devices with 2G or more memory should also include this booster
+# to improve camera startup times and the like
+#- mapplauncherd-booster-silica-qt5-media
+
 Summary: Jolla Configuration @DEVICE@
 
