[configs] Update QtQuick config for dpi scalable use. Contributes to JB#43710
Values based on QtQuick defaults, base dpi roughly Jolla 1.
FlickThreshold, however, bumped from 15->30.

Old MouseArea config removed as it hasn't been used in Qt 5.6 times.

--- a/sparse/etc/xdg/QtProject/QtQuick2.conf
+++ b/sparse/etc/xdg/QtProject/QtQuick2.conf
@@ -1,2 +1,17 @@
-[QuickMouseArea]
-PressAndHoldDelay=600
+[General]
+BaseDPI=240
+
+[QuickFlickable]
+FlickThresholdScaled=30
+FlickDefaultMaxVelocityScaled=2500
+FlickDefaultDecelerationScaled=1500
+FlickMultiflickThresholdScaled=1250
+
+[QuickGridView]
+FlickSnapOneThresholdScaled=30
+
+[QuickItemView]
+DefaultCacheBufferScaled=320
+
+[QuickListView]
+FlickSnapOneThresholdScaled=30
