--- a/sparse/etc/bluez5/bluetooth/input.conf
+++ b/sparse/etc/bluez5/bluetooth/input.conf
@@ -10,4 +10,4 @@
 
 # Enable HID protocol handling in userspace input profile
 # Defaults to false (HIDP handled in HIDP kernel module)
-#UserspaceHID=true
+UserspaceHID=true
