[bluez5] Autodetect HID protocol handling type by default. JB#44201
Signed-off-by: Juho Hämäläinen <juho.hamalainen@jolla.com>

--- a/sparse/etc/bluez5/bluetooth/input.conf
+++ b/sparse/etc/bluez5/bluetooth/input.conf
@@ -11,3 +11,8 @@
 # Enable HID protocol handling in userspace input profile
 # Defaults to false (HIDP handled in HIDP kernel module)
 #UserspaceHID=true
+
+# Autodetect HID protocol handling type
+# Requires bluez5 5.47+git11 to do anything but no adverse
+# effects with older versions.
+AutodetectUserspaceHID=true
