[configs] Set profile changed notify flag for bluez5. JB#42201

--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
@@ -34,6 +34,7 @@ flags1   = disable_notify
 type    = bthspforcall
 name0    = startswith:"bluez_card"
 profile0 = headset_head_unit
+flags0   = notify_profile_changed
 name1    = equals:$droid_card
 profile1 = voicecall
 flags1   = disable_notify
