Define othermedia group.
Without othermedia group default one is created but as we wan't more
options than the default let's define the group ourself.

[configs] Define othermedia group. JB#45899

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -43,6 +43,10 @@ droid_sco_input = input-bluetooth_sco_headset
 # -------- Group section -------------------------------------------------------
 
 [group]
+name   = othermedia
+flags  = route_audio, limit_volume, cork_stream
+
+[group]
 name   = idle
 flags  = nopolicy
 sink   = sink.null
