Add policy configs for lineout accessory.
[configs] Add policy configs for lineout accessory. JB#44547

Signed-off-by: Juho Hämäläinen <juho.hamalainen@jolla.com>

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -207,6 +207,13 @@ flags = $droid_sink_port_change_delay
 delay = $delay_time
 
 [device]
+type  = ihfandlineout
+sink  = droid.output.media_latency@equals:"true"
+ports = droid.output.primary@equals:"true"->output-speaker+wired_headphone
+flags = $droid_sink_port_change_delay
+delay = $delay_time
+
+[device]
 type  = bta2dp
 sink  = startswith:"bluez_sink"
 ports = droid.output.primary@equals:"true"->output-speaker
@@ -342,6 +349,26 @@ delay = 200
 
 [device]
 type  = headphoneforalien
+sink  = droid.output.media_latency@equals:"true"
+ports = droid.output.primary@equals:"true"->output-wired_headphone
+flags = refresh_always
+
+[device]
+type  = lineout
+sink  = droid.output.media_latency@equals:"true"
+ports = droid.output.primary@equals:"true"->output-wired_headphone
+flags = disable_notify, refresh_always, $droid_sink_port_change_delay
+delay = $delay_time
+
+[device]
+type  = lineoutforcall
+sink  = droid.output.primary@equals:"true"
+ports = droid.output.primary@equals:"true"->output-wired_headphone
+flags = refresh_always, delayed_port_change
+delay = 200
+
+[device]
+type  = lineoutforalien
 sink  = droid.output.media_latency@equals:"true"
 ports = droid.output.primary@equals:"true"->output-wired_headphone
 flags = refresh_always
