--- a/sparse/etc/pulse/xpolicy.conf.d/bluez4.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez4.conf
@@ -11,6 +11,11 @@ name    = equals:$droid_card
 profile = ringtone
 
 [card]
+type    = ihfandlineout
+name    = equals:$droid_card
+profile = ringtone
+
+[card]
 type    = headset
 name    = equals:$droid_card
 profile = $droid_card_profile
@@ -37,6 +42,21 @@ profile = voicecall
 
 [card]
 type    = headphoneforalien
+name    = equals:$droid_card
+profile = communication
+
+[card]
+type    = lineout
+name    = equals:$droid_card
+profile = $droid_card_profile
+
+[card]
+type    = lineoutforcall
+name    = equals:$droid_card
+profile = voicecall
+
+[card]
+type    = lineoutforalien
 name    = equals:$droid_card
 profile = communication
 
