--- a/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/bluez5.conf
@@ -88,6 +88,14 @@ profile1 = off
 flags1   = disable_notify
 
 [card]
+type    = ihfandlineout
+name0   = equals:$droid_card
+profile0= ringtone
+name1   = startswith:"bluez_card"
+profile1= off
+flags1  = disable_notify
+
+[card]
 type    = headset
 name0   = equals:$droid_card
 profile0= $droid_card_profile
@@ -134,6 +142,30 @@ profile0= communication
 name1    = startswith:"bluez_card"
 profile1 = off
 flags1   = disable_notify
+
+[card]
+type    = lineout
+name0   = equals:$droid_card
+profile0= $droid_card_profile
+name1   = startswith:"bluez_card"
+profile1= off
+flags1  = disable_notify
+
+[card]
+type    = lineoutforcall
+name0   = equals:$droid_card
+profile0= voicecall
+name1   = startswith:"bluez_card"
+profile1= off
+flags1  = disable_notify
+
+[card]
+type    = lineoutforalien
+name0   = equals:$droid_card
+profile0= communication
+name1   = startswith:"bluez_card"
+profile1= off
+flags1  = disable_notify
 
 [card]
 type    = ihfandtvout
