configs: Use voip call state from resource policy.
[configs] Use voip call state from resource policy. JB#45496

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -570,6 +570,11 @@ value        = equals:inactive
 set-property = module-name@equals:module-policy-enforcement, property:"x-nemo.voicecall.status", value@constant:"inactive"
 
 [context-rule]
+variable     = call
+value        = equals:voip
+set-property = module-name@equals:module-policy-enforcement, property:"x-nemo.voicecall.status", value@constant:"voip"
+
+[context-rule]
 variable     = media_state
 value        = matches:"^[^t].*"
 set-property = module-name@equals:module-policy-enforcement, property:"x-nemo.media.state", value@copy-from-context
