configs: Use mute-by-route for alien groups.
Aliendalvik doesn't like the streams being corked so move them to null
sink and source so that they can keep running while effectively being
muted.

[configs] Use mute-by-route for alien groups. JB#45496

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -168,11 +168,11 @@ flags  = route_audio
 
 [group]
 name   = alien
-flags  = route_audio, limit_volume, cork_stream
+flags  = route_audio, limit_volume, mute_by_route
 
 [group]
 name   = aliencall
-flags  = route_audio, limit_volume, cork_stream
+flags  = route_audio, limit_volume, mute_by_route
 
 [group]
 name   = probesink
