configs: Add sandboxing to droid-late-start.
[configs] Add sandboxing to droid-late-start. Fixes JB#45315

Signed-off-by: Marko Lemmetty <marko.lemmetty@jollamobile.com>

--- a/sparse/lib/systemd/system/droid-late-start.service
+++ b/sparse/lib/systemd/system/droid-late-start.service
@@ -5,6 +5,10 @@ Before=network.target start-user-session@USER.service bluetooth.service ofono.se
 Conflicts=shutdown.target
 
 [Service]
+# Sandboxing
+CapabilityBoundingSet=
+ProtectHome=true
+ProtectSystem=full
 ExecStart=/usr/bin/setprop droid.late_start trigger_late_start
 
 [Install]
