patterns: Add home encryption enabler.
[patterns] Add home encryption enabler.

Signed-off-by: Matti Kosola <matti.kosola@jolla.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -68,6 +68,9 @@ Requires:
 # enable device lock and allow to select untrusted software
 - jolla-devicelock-daemon-encsfa
 
+# Enable home encryption
+#- sailfish-device-encryption
+
 # For GPS
 - geoclue-provider-hybris
 
