--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -48,19 +48,8 @@ Requires:
 # This is needed for notification LEDs
 - mce-plugin-libhybris
 
-## USB mode controller
-# Enables mode selector upon plugging USB cable:
+# USB mode controller
 - usb-moded
-- usb-moded-defaults-android
-- usb-moded-developer-mode-android
-
-# Extra useful modes not officially supported:
-# might need some configuration to get working
-#- usb-moded-mass-storage-android-config
-# working but careful with roaming!
-- usb-moded-connection-sharing-android-config
-# android diag mode only usable for certain android tools
-#- usb-moded-diag-mode-android
 
 # hammerhead, grouper, and maguro use this in scripts, so include for all
 - rfkill
