patterns: replace audioflingerglue with audiosystem-passthrough
[patterns] replace audioflingerglue with audiosystem-passthrough. JB#49778

Signed-off-by: Simonas Leleiva <simonas.leleiva@jolla.com>

--- a/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
+++ b/patterns/templates/jolla-hw-adaptation-@DEVICE@.yaml
@@ -28,6 +28,13 @@ Requires:
 - qt5-plugin-generic-evdev
 
 - pulseaudio-modules-droid
+- pulseaudio-modules-droid-hidl
+
+# The -dummy-af is needed for newer devices that run the main
+# audiosystem-passthrough in qti mode (e.g. >=Android 9 Qualcomm),
+# to fix non-responding Camera app and/or voice during a phone call:
+#- audiosystem-passthrough-dummy-af
+
 # for audio recording to work:
 - qt5-qtmultimedia-plugin-mediaservice-gstmediacapture
 
