--- a/droid-config-@DEVICE@.spec.template
+++ b/droid-config-@DEVICE@.spec.template
@@ -10,8 +10,9 @@
 # Community HW adaptations need this
 %define community_adaptation 1
 
-# Sailfish OS is considered to-scale, if in app grid you get 4-in-a-row icons
-# and 2x2 or 3x3 covers when up-to-4 or 5-or-more apps are open respectively.
+# Sailfish OS is considered to-scale, if in the App Grid you get 4-in-a-row icons,
+# and 2-in-a-row or 3-in-a-row app covers in the Home Screen, depending on
+# how many apps are open.
 # For 4-5.5" device screen sizes of 16:9 ratio, use this formula (hold portrait):
 # pixel_ratio = 4.5/DiagonalDisplaySizeInches * HorizontalDisplayResolution/540
 # Other screen sizes and ratios will require more trial-and-error.
