patterns: migrate templates to meta-packages
[patterns] migrate templates to meta-packages

Signed-off-by: Simonas Leleiva <simonas.leleiva@jolla.com>

--- a/droid-config-@DEVICE@.spec.template
+++ b/droid-config-@DEVICE@.spec.template
@@ -19,6 +19,8 @@
 %define pixel_ratio 1.0
 
 %include droid-configs-device/droid-configs.inc
+%include patterns/patterns-sailfish-device-adaptation-@DEVICE@.inc
+%include patterns/patterns-sailfish-device-configuration-@DEVICE@.inc
 
 # IMPORTANT if you want to comment out any macros in your .spec, delete the %
 # sign, otherwise they will remain defined! E.g.:
