--- a/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
+++ b/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
@@ -21,3 +21,5 @@ service wificond /system/bin/wificond_HYBRIS_DISABLED
 service storaged /system/bin/storaged_HYBRIS_DISABLED
 
 service surfaceflinger surfaceflinger_HYBRIS_DISABLED
+
+service bootanim /system/bin/bootanimation_HYBRIS_DISABLED
