services: disable android.hardware.usb
We don't want android stuff to mess with Sailfish OS usb.

[services] disable android.hardware.usb

Signed-off-by: Simonas Leleiva <simonas.leleiva@jolla.com>

--- a/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
+++ b/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
@@ -23,3 +23,5 @@ service storaged /system/bin/storaged_HYBRIS_DISABLED
 service surfaceflinger surfaceflinger_HYBRIS_DISABLED
 
 service bootanim /system/bin/bootanimation_HYBRIS_DISABLED
+
+service vendor.usb-hal-1-0 /vendor/bin/hw/android.hardware.usb@1.0-service
