--- a/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
+++ b/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
@@ -25,3 +25,5 @@ service surfaceflinger surfaceflinger_HYBRIS_DISABLED
 service bootanim /system/bin/bootanimation_HYBRIS_DISABLED
 
 service vendor.usb-hal-1-0 /vendor/bin/hw/android.hardware.usb@1.0-service
+
+service vendor.vibrator-1-0 /vendor/bin/hw/android.hardware.vibrator@1.0-service_HYBRIS_DISABLED
