--- a/sparse-10/usr/lib/systemd/system/droid-hal-init.service
+++ b/sparse-10/usr/lib/systemd/system/droid-hal-init.service
@@ -14,7 +14,7 @@ Type=notify
 NotifyAccess=all
 ExecStartPre=-/bin/sh /usr/bin/droid/droid-hal-early-init.sh
 ExecStart=/bin/sh /usr/bin/droid/droid-hal-startup.sh
-ExecStop=/bin/sh /usr/bin/droid/droid-hal-shutdown.sh %c
+ExecStop=/bin/sh /usr/bin/droid/droid-hal-shutdown.sh
 Restart=always
 # Lets make sure we don't block minutes in case of errors.
 TimeoutSec=15
