configs: ofono settings for mobile data.
These have a good chance to work as a generic template for
Android 10 adaptations.

[configs] ofono settings for mobile data. JB#53632

--- a/sparse-10/etc/ofono/ril_subscription.conf
+++ b/sparse-10/etc/ofono/ril_subscription.conf
@@ -5,11 +5,15 @@
 #Identity=radio:radio
 #3GLTEHandover=true
 #SetRadioCapability=auto
-
 SetRadioCapability=off
+
 emptyPinQuery=true
 radioPowerCycle=false
 confirmRadioPowerOn=false
+useDataProfiles=true
+mmsDataProfileId=0
+allowDataReq=off
+umtsNetworkMode=0
 
 [ril_0]
 transport=binder:name=slot1
@@ -23,7 +27,6 @@ ecclistFile=/run/ofono/ril.ecclist
 #technologies=all
 #enable4G=true
 #uiccWorkaround=true
-#allowDataReq=auto
 #dataCallFormat=auto
 #dataCallRetryLimit=4
 #dataCallRetryDelay=200
