configs: Update ohm signals for application id.
[configs] Update ohm signals for application id. JB#53700

--- a/sparse/etc/ohm/dbus_signal_conf.ini
+++ b/sparse/etc/ohm/dbus_signal_conf.ini
@@ -1,15 +1,15 @@
-[topmost_signal]
-name = privateTopmostWindowProcessIdChanged
+[application_signal]
+name = privateTopmostWindowPolicyApplicationIdChanged
 path = /
 interface = org.nemomobile.compositor
-signature = i
-arguments = pid
-target = active_application_request
+signature = s
+arguments = id
+target = policy_active_application_request
 
-[alien_signal]
-name = alienProcessIdChanged
-path = /org/nemomobile/policy
+[appsupport_signal]
+name = privatePolicyActiveAppsupportChanged
+path = /
 interface = org.nemomobile.policy
-signature = i
-arguments = pid
-target = alien_application_request
+signature = s
+arguments = id
+target = policy_active_appsupport_request
