configs: Add possibility to define specific VOIP sink.
Use variable for voip sink property name so that it can be set by only
changing the variable value.

[configs] Add possibility to define specific VOIP sink. JB#55832

--- a/sparse/etc/pulse/xpolicy.conf
+++ b/sparse/etc/pulse/xpolicy.conf
@@ -32,6 +32,7 @@ droid_source_input_microphone = input-builtin_mic
 droid_source_input_backmicrophone = input-back_mic
 droid_source_input_fmradio = input-fm_tuner
 droid_sink_port_change_delay = delayed_port_change
+sink_class_voip = droid.output.media_latency
 delay_time = 150
 # cards and profiles
 droid_card = droid_card.primary
@@ -251,7 +252,7 @@ flags  = disable_notify, refresh_always
 
 [device]
 type  = bthspforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->$droid_sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
@@ -287,7 +288,7 @@ flags  = disable_notify, refresh_always
 
 [device]
 type  = bthfpforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->$droid_sco_output
 flags = disable_notify, refresh_always, delayed_port_change
 
@@ -324,7 +325,7 @@ ports  = droid.input.external@equals:"true"->input-wired_headset
 
 [device]
 type  = headsetforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->output-wired_headset
 flags = refresh_always
 
@@ -349,7 +350,7 @@ delay = 200
 
 [device]
 type  = headphoneforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->output-wired_headphone
 flags = refresh_always
 
@@ -369,7 +370,7 @@ delay = 200
 
 [device]
 type  = lineoutforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->output-wired_headphone
 flags = refresh_always
 
@@ -408,7 +409,7 @@ flags = refresh_always
 
 [device]
 type  = ihfforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->output-speaker
 flags = refresh_always
 
