--- a/sparse/etc/pulse/xpolicy.conf.d/earpiece.conf
+++ b/sparse/etc/pulse/xpolicy.conf.d/earpiece.conf
@@ -17,6 +17,6 @@ ports = droid.output.primary@equals:"true"->output-earpiece
 
 [device]
 type  = earpieceforalien
-sink  = droid.output.media_latency@equals:"true"
+sink  = $sink_class_voip@equals:"true"
 ports = droid.output.primary@equals:"true"->output-earpiece
 flags = refresh_always
