sparse: Disable update_verifier for ports starting from Android 10
update_verifier tries to verify Android updates which doesn't make
sense in the case of it running as droid-system.

update_verifier uses dm-verity to verify the update's state and will
restart when the verification fails.

This always fail in our case and will show up in the symptom of a boot loop.

Read here for more:
https://android.googlesource.com/platform/bootable/recovery/+/refs/heads/master/update_verifier
https://source.android.com/devices/tech/ota/ab
https://source.android.com/security/verifiedboot

[sparse] Disable update_verifier for ports starting from Android 10. JB#57317

Signed-off-by: Björn Bidar <bjorn.bidar@jolla.com>

--- a/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
+++ b/sparse-10/usr/libexec/droid-hybris/system/etc/init/disabled_services.rc
@@ -27,3 +27,7 @@ service bootanim /system/bin/bootanimation_HYBRIS_DISABLED
 service vendor.usb-hal-1-0 /vendor/bin/hw/android.hardware.usb@1.0-service_HYBRIS_DISABLED
 
 service vendor.vibrator-1-0 /vendor/bin/hw/android.hardware.vibrator@1.0-service_HYBRIS_DISABLED
+
+service update_verifier_nonencrypted /system/bin/update_verifier_HYBRIS_DISABLED nonencrypted
+
+service update_verifier /system/bin/update_verifier_HYBRIS_DISABLED ${vold.decrypt}
