--- a/sparse/etc/bluez5/bluetooth/input.conf
+++ b/sparse/etc/bluez5/bluetooth/input.conf
@@ -16,3 +16,16 @@
 # Requires bluez5 5.47+git11 to do anything but no adverse
 # effects with older versions.
 AutodetectUserspaceHID=true
+
+# Limit HID connections to bonded devices
+# The HID Profile does not specify that devices must be bonded, however some
+# platforms may want to make sure that input connections only come from bonded
+# device connections. Several older mice have been known for not supporting
+# pairing/encryption.
+# Defaults to false to maximize device compatibility.
+#ClassicBondedOnly=true
+
+# LE upgrade security
+# Enables upgrades of security automatically if required.
+# Defaults to true to maximize device compatibility.
+#LEAutoSecurity=true
